@@ -18,6 +18,8 @@ UNRELEASED
 - copy, cleanup and integrate py.io capture
   from pylib 1.4.20.dev2 (rev 13d9af95547e)
 
+- make capfd/capsys.capture private, its unused and shouldnt be exposed
+
 
 2.5.1
 -----------------------------------
